--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Matemasie&family=Qwitcher+Grypen:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
 
 .container{
     border: 2px solid ;
-    width: 500px ;
+    width: 800px ;
     height: 500px;
     margin: 0 auto;
     align-content: center;
@@ -11,10 +12,42 @@
 .task{
     display: flex;
     justify-content: center;
+    align-content: center;
 }
 h2{
     font-size: 70px;
     color: #57b770;
     font-family: "Qwitcher Grypen", cursive;
     font-weight: 700;
+}
+
+#userInput{
+    color:#b4b221;
+    font-size: 30px;
+    border-radius: 20px;
+    border: 2px solid rgb(158 180 66 / 69%);
+    outline: none;
+    padding: 0 10px;
+}
+
+#Submit{
+    font-size: 30px;
+    border-radius: 30px;
+    padding: 0 20px;
+    font-family: "Macondo", cursive;
+    color: #fff; 
+    outline: none;
+    border: none;
+    background: #1b541ac9;
+}
+#Checkbox{
+    background-color: #4caf50;
+    border-color: #4caf50;
+}
+p{
+    font-family: "Macondo", cursive;
+    font-size: 30px ;
+}
+#Delete{
+    
 }
