--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h2{
     border-radius: 20px;
     border: 2px solid rgb(158 180 66 / 69%);
     outline: none;
+    margin-right: 25px;
     padding: 0 10px;
     font-family: "Macondo", cursive;
     width: 80%;
