--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@
     box-shadow: 0 0 5px  #618b62;
 }
 #taskContainer{
-    display: flex;
-    justify-content: space-evenly;
+    display: flex ; 
+    justify-content: space-between;
     margin: 20px;
     padding: 20px;
-
+    
 }
 .hidden {
     display: none !important;
@@ -35,6 +35,7 @@ h2{
     border-radius: 20px;
     border: 2px solid rgb(158 180 66 / 69%);
     outline: none;
+    margin-right: 25px;
     padding: 0 10px;
     font-family: "Macondo", cursive;
     width: 80%;
